# oss-repo-template

./: index.md
labs/lab-01/: report.md
labs/lab-02/: report.md
labs/lab-03/: report.md
labs/lab-04/: report.md
labs/lab-05/: report.md
labs/lab-05/Lab-BuildSystemsExample/: CMakeLists.txt  Makefile  dynamic_block  static_block
labs/lab-05/Lab-BuildSystemsExample/dynamic_build/: CMakeCache.txt  Makefile  cmake_install.cmake  dynamic_block
labs/lab-05/Lab-BuildSystemsExample/dynamic_build/source/: Makefile  libDynamicBlock.dylib
labs/lab-05/Lab-BuildSystemsExample/source/: CMakeLists.txt
labs/lab-05/Lab-BuildSystemsExample/static_build/: CMakeCache.txt  Makefile  cmake_install.cmake  static_block
labs/lab-05/Lab-BuildSystemsExample/static_build/source/: Makefile  cmake_install.cmake
labs/lab-05/cmake-step1/source/: CMakeLists.txt  tutorial.cxx
labs/lab-05/cmake-step2/source/: CMakeLists.txt  TutorialConfig.h.in  tutorial.cxx
labs/lab-05/cmake-step3/source/: CMakeLists.txt  TutorialConfig.h.in
labs/lab-05/cmake-step3/source/MathFunctions/: CMakeLists.txt
labs/lab-05/cmake-step4/install/include/: TutorialConfig.h
labs/lab-05/cmake-step4/source/: CMakeLists.txt  tutorial.cxx
labs/lab-05/cmake-step4/source/MathFunctions/: CMakeLists.txt
labs/lab-05/cmake-step5/source/: CMakeLists.txt
labs/lab-05/cmake-step5/source/MathFunctions/: CMakeLists.txt  mysqrt.cxx
labs/lab-06/: report.md
labs/lab-06/networkx-code/: plot_words_len_4.py  plot_words_len_5.py  plot_words_variation.py
labs/lab-07/: report.md
labs/lab-08/: report.md
labs/lab-09/: report.md
labs/lab-10/: report.md
labs/lab-10/python-code/: check2.py  check3.py
